# bestbefore

./: Cargo.toml  README.md
app/: Cargo.toml  index.html
app/src/: counter.rs  main.rs
backend/: BestBefore.db  Cargo.toml
backend/migrations/: 20221024175909_create_food_items_table.down.sql  20221024175909_create_food_items_table.up.sql
backend/src/: best_before.rs  config.rs  errors.rs  main.rs  models.rs  server_error.rs
backend/src/errors/: processing_error.rs
backend/src/models/: food_item.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
