[package]
name = "best_before_backend"
version = "0.1.0"
edition = "2021"

[dependencies]

actix-web = "4"
env_logger = "0.9.1"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = [
    "macros",
    "serde",
    "serde-human-readable",
] }
